--- a/.github/workflows/taiko.yml
+++ b/.github/workflows/taiko.yml
@@ -57,8 +57,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        node_version: ['10', '12']
-        os: [ubuntu-latest, windows-latest]
+        node_version: ['10']
+        os: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v2
       - name: Use NodeJS ${{ matrix.node_version }}
